# CNJ_LCD4_N2K

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/NMEA2000/src/: Seasmart.cpp
components/NMEA2000_esp32xx/: NMEA2000_esp32xx.cpp  NMEA2000_esp32xx.h
components/OwnN2K/: Kconfig  OwnN2K.cpp
main/: CMakeLists.txt  Exio.cpp  Exio.h  Globals.h  Kconfig.projbuild  OneWire.cpp  OwnMqtt.cpp  OwnMqtt.h  Screen1.cpp  Screen1.h  Screen2.cpp  Screen2.h  Screen5.cpp  Screen5.h  cnj_Lcd4_N2K.c  display.h  idf_component.yml  lvgl_port.c  statusBar.cpp  statusBar.h  styles.cpp  styles.h  sw6106.c  sw6106.h  waveshare-display.cpp  waveshare-display.h  wifi.c  wifi.h  wifi_ui.cpp
main/images/: Indicator.c  arrow_app.c  arrow_true.c  engine_check.c  engine_ok.c  oilFault.c  tempFault.c
