idf_component_register(SRCS "Screen2.cpp" "styles.cpp" "Screen1.cpp" "cnj_Lcd4_N2K.c" 
                            "lvgl_port.c" 
                            "waveshare-display.cpp" 
                            "statusBar.cpp" 
                            "Screen1.cpp"
                            "Screen2.cpp"
                            "styles.cpp"
                            "Exio.cpp" 
                            "OneWire.cpp" 
                            "wifi.c" 
                            "images/engine_ok.c" 
                            "images/engine_check.c" 
                            "images/oilFault.c" 
                            "images/tempFault.c" 
                            "images/scale_back.c"
                            "images/scale_back_indexed.c"
                            "images/arrow_app.c" 
                            "images/arrow_true.c"
                            "images/Indicator.c"
                            "images/Gulls.c"
                        INCLUDE_DIRS "."
                        EMBED_TXTFILES web/index.html)
idf_component_get_property(lvgl_lib lvgl__lvgl COMPONENT_LIB)
target_compile_options(${lvgl_lib} PRIVATE -Wno-format)
